# dtos/locationDto.ts
@@ -1,4 +1,4 @@
-import { IsLatitude, IsLongitude, MinDate, MaxDate } from "class-validator"
+import { IsLatitude, IsLongitude, MinDate, MaxDate, IsNumber } from "class-validator"
 import { IsBiggerThan } from "../validationDecorators/isBiggerThan"
 import { Type } from "class-transformer"
 
@@ -19,15 +19,19 @@ export class LocationDto {
     @MaxDate(new Date(), { message: "date cannot be in future" })
     @IsBiggerThan("timeFrom", { message: "timeTo must be after timeFrom" })
     readonly timeTo: Date
+    
+    readonly radius: number
 
     constructor(
         latitude: number,
         longitude: number,
         timeFrom: Date,
-        timeTo: Date) {
+        timeTo: Date,
+        radius: number) {
         this.latitude = latitude
         this.longitude = longitude
         this.timeFrom = timeFrom
         this.timeTo = timeTo
+        this.radius = radius
     }
 }
